---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 70
  l: "struct TestStruct {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^
- n: 71
  l: "    instance_var: String,\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 72
  l: "}\n"
  m: "^  "
- n: 268
  l: "pub struct PubStruct {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 269
  l: "pub(crate) struct PubCrateStruct {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 270
  l: "pub(self) struct PubSelfStruct {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 271
  l: "pub(super) struct PubSuperStruct {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
